--- a/air-bnb/public/index.html
+++ b/air-bnb/public/index.html
@@ -25,8 +25,13 @@
 
   <title>React App</title>
 
-  <!-- Tailwind CSS CDN link -->
-  <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+  <!-- Thêm các liên kết CSS và FontAwesome vào đây -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- tailwind -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -43,7 +48,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
 </body>
 
