--- a/air-bnb/public/index.html
+++ b/air-bnb/public/index.html
@@ -34,6 +34,10 @@
 
   <!-- Load icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
