--- a/air-bnb/public/index.html
+++ b/air-bnb/public/index.html
@@ -34,9 +34,9 @@
 
   <!-- Load icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-h7+hKtfbC1e89T4B7M/9WfKa7trm3I7s20XbgoYmRDgCQeCkSRsD+5bN9j88iPfnd63J0zXeZtCx4x6t+Z5vbw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
   <!-- tailwind -->
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
